syntax = "proto3";
package metapb;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_enum_prefix_all) = true;

// Action the action while a new node join the cluster
enum Action {
    None     = 0;
    ScaleOut = 1;
}

// ResourceKind the resource king
enum ResourceKind {
    LeaderKind     = 0;
    ReplicaKind    = 1;
}

// State the container state
enum ContainerState {
    // UP is normal state
    UP        = 0;
    // Offline is the unavailable state
    Offline   = 1;
    // Tombstone is the destory state
    Tombstone = 2;
}

// State the resource state
enum ResourceState {
    // Running is serve state
    Running        = 0;
    // Create is the destory state
    WaittingCreate = 1;
    // Removed is the destory state
    Removed        = 2;
}

// ChangePeerType change peer type
enum ChangePeerType {
    AddNode        = 0;
    RemoveNode     = 1;
    UpdateNode     = 2;
    AddLearnerNode = 3;
    ScalePeer      = 4;
}

// PeerRole role of current peer
enum PeerRole {
    Voter         = 0;
    Learner       = 1;
    IncomingVoter = 2;
    DemotingVoter = 3;
}

// CheckPolicy check policy
enum CheckPolicy {
    SCAN        = 0;
    APPROXIMATE = 1;
    USEKEY      = 2;
}

// OperatorStatus Operator Status
enum OperatorStatus {
    SUCCESS = 0;
	TIMEOUT = 1;
	CANCEL  = 2;
	REPLACE = 3;
	RUNNING = 4;
}

// ResourceEpoch resource epoch
message ResourceEpoch {
    // Conf change version, auto increment when add or remove peer
    uint64 confVer = 1;
    // Resource version, auto increment when split or merge
    uint64 version = 2;
}

// Peer is a replica of the resource, we called peer
message Peer {
    uint64   id          = 1 [(gogoproto.customname) = "ID"];
    uint64   containerID = 2;
    PeerRole role        = 3;
}

// PeerStats peer stats
message PeerStats {
    Peer   peer        = 1 [(gogoproto.nullable) = false];
	uint64 downSeconds = 2;
}

// Pair key value pair
message Pair {
    string key   = 1;
    string value = 2;
}

// Timestamp tso timestamp
message Timestamp {
    int64 physical = 1;
    int64 logical  = 2;
}

// ResourceStats resource stats
message ResourceStats {
    // resource ID
    uint64       resourceID      = 1;
    // bytes written during this period
	uint64       writtenBytes    = 2;
	// keys written during this period
	uint64       writtenKeys     = 3;
    // bytes read during this period
	uint64       readBytes       = 4;     
	// keys read during this period
	uint64       readKeys        = 5;
	// approximate data size in bytes of the resource
	uint64       approximateSize = 6;
	// approximate count of keys in the resource
	uint64       approximateKeys = 7;
    // Actually reported time interval
    TimeInterval interval        = 8;
}

// ContainerStats container stats
message ContainerStats {
             // Container id
             uint64       containerID        = 1;
             // When the container is started (unix timestamp in seconds).
             uint64       startTime          = 2;
             // Actually reported time interval
             TimeInterval interval           = 3;
             // Capacity for the container.
             uint64       capacity           = 4;
             // Available size for the container.
             uint64       available          = 5;
             // Actually used space by db
             uint64       usedSize           = 6;
             // If the container is busy
             bool         isBusy             = 7;
             // Total resource count in this container.
             uint64       resourceCount      = 8;
             // Current sending snapshot count.
             uint64       sendingSnapCount   = 9;
             // Current receiving snapshot count.
             uint64       receivingSnapCount = 10;
             // How many resource is applying snapshot.
             uint64       applyingSnapCount  = 11;
             // Bytes written for the container during this period.
             uint64       writtenBytes       = 12;
             // Bytes read for the container during this period.
             uint64       readBytes          = 13;
             // Bytes written for the container during this period.
             uint64       writtenKeys        = 14;
             // Bytes read for the container during this period.
             uint64       readKeys           = 15;
    // Threads' CPU usages in the container
    repeated RecordPair   cpuUsages          = 16 [(gogoproto.nullable) = false];
    // Threads' read disk I/O rates in the container
    repeated RecordPair   readIORates        = 17 [(gogoproto.nullable) = false];
    // Threads' write disk I/O rates in the container
    repeated RecordPair   writeIORates       = 18 [(gogoproto.nullable) = false];
    // Operations' latencies in the container
    repeated RecordPair   opLatencies        = 19 [(gogoproto.nullable) = false];
}

// RecordPair record pair
message RecordPair {
    string key   = 1;
    uint64 value = 2;
}

// Member prophet member
message Member {
    uint64 id   = 1 [(gogoproto.customname) = "ID"];
    string name = 2;
    string addr = 3;
}

// Cluster prophet cluster
message Cluster {
    uint64 id           = 1 [(gogoproto.customname) = "ID"];
    uint32 maxPeerCount = 2;
}

// TimeInterval time interval
message TimeInterval {
    // The unix timestamp in seconds of the start of this period.
    uint64 start = 1;
    // The unix timestamp in seconds of the end of this period.
    uint64 end   = 2;
}

// RemoveResourceJob remove resources job
message RemoveResourceJob {
             uint64 id  = 1 [(gogoproto.customname) = "ID"];
    repeated Peer peers = 2 [(gogoproto.nullable) = false];
}